--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
                                 <a href="">March 2020</a>
                             </li>
                             <li>
-                                <a href="">January2018</a>
+                                <a href="">January 2018</a>
                             </li>
                             <li>
                                 <a href="">December 2019</a>
